# mdtoreveal

./: README.md  md2reveal.py  mdtoreveal.py  setup.cfg
