[metadata]
name = md2reveal
version = 0.1
description = Transform a flat markdown to a reveal.js presentation.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Julien Palard
author_email = julien@palard.fr
url = https://github.com/JulienPalard/md2reveal
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
py_modules = md2reveal
python_requires = >= 3.6
install_requires =
  jinja2
  requests

[options.entry_points]
console_scripts = md2reveal=md2reveal:main
